SpannerTest and processBuilder